include $(top_srcdir)/misc/Makefile.common

SUBDIRS = gettext

if INSTALL_M4
m4datadir = $(ACLOCAL_DIR)
else
m4datadir = $(datadir)/aclocal
endif

m4data_DATA = xine.m4

EXTRA_DIST = \
	aa.m4 \
	arts.m4 \
	attributes.m4 \
	directx.m4 \
	dl.m4 \
	dvdnav.m4 \
	gas.m4 \
        ioctl_request.m4 \
	irixal.m4 \
	libFLAC.m4 \
	libfame.m4 \
	opengl.m4 \
	optimizations.m4 \
	pkg.m4 \
	pthreads.m4 \
        symbol.m4 \
	xine.m4 \
	_xine.m4 \
	xv.m4
